docs(arrow-jdbc): document driver release -iomete.3 (catalog scoping) and modern-JDK flags
Document two field-driven requirements for the IOMETE Arrow Flight SQL JDBC
driver and cover a new BI-compatibility feature.

Java version requirements (JDK 16+): the driver's Apache Arrow engine manages
its own off-heap memory through low-level Java internals that modern JDKs lock
down, so the host program must add startup flags or the driver fails at connect
time. This is inherent to every Arrow-based driver and can't be fixed inside the
driver itself.

- user-guide/driver/arrow-flight-jdbc-driver.mdx: per-version flag matrix
  (none on 8-15, --add-opens on 16-23, plus --sun-misc-unsafe-memory-access on
  24+), the exact errors seen without the flags, the rationale via JEP
  396/403/498, and how to pass flags through java -jar, JDK_JAVA_OPTIONS, or an
  application server's Java options.
- docs/integrations/dbtools/dbeaver.md: the dbeaver.ini -vmargs recipe and the
  "auto-update silently swapped the bundled JRE" gotcha, cross-linked to the
  driver guide.

Catalog scoping for BI tools (driver >= 19.0.0-iomete.3): document
compatibilityMode=oracle / catalogFilterEnabled, which pin a connection to one
catalog so clients that assume two-part schema.table names (Oracle Analytics
Server, BI Publisher) work against IOMETE's three-part catalog.schema.table
hierarchy. Includes the parameter table and URL examples.

Also refresh the driver description and pin Arrow doc links to the 19.0 release.
issue: https://linear.app/iomete/issue/COM-767